changed color, header layout

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,6 +1,6 @@
 .bg-store{
   /* background:green; */
-  background-image: url('../public/store/store.png');
+  background-image: url('../public/team_1.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
