--- a/front/src/components/Footer.css
+++ b/front/src/components/Footer.css
@@ -1,13 +1,13 @@
 .footer-clean {
   padding:50px;
-  background:black;
-  color:#93918d
+  background:#2A503B;
+  color:#A6C6B9;
 }
 
 .footer-clean h3 {
   margin-top:0;
   margin-bottom:12px;
-  color:#93918d;
+  /* color:#A6C6B9; */
   font-size:17px;
 }
 
@@ -40,7 +40,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .footer-clean .item.social {
     text-align:center;
   }
@@ -67,7 +67,7 @@
 
 @media (max-width:991px) {
   .footer-clean .item.social > a {
-    margin-top:40px;
+    margin-top:20px;
   }
 }
 
@@ -75,8 +75,15 @@
   .footer-clean .item.social > a {
     margin-top:10px;
   }
+  img.footer-logo{
+    width: 40%;
+  }
 }
-
+@media screen and (min-width: 575px) {
+  img.footer-logo{
+    width: 100%;
+  }
+}
 .footer-clean .copyright {
   margin-top:14px;
   margin-bottom:0;
@@ -84,7 +91,7 @@
   opacity:0.6;
 }
 
-img.footer-logo{
-  width:50px; 
-  height:50px;
+.center_logo_and_text{
+  display: flex;
+  justify-content: center;
 }
