--- a/front/src/index.css
+++ b/front/src/index.css
@@ -4,7 +4,7 @@ body{
     line-height: 1.667em;
     font-weight: 300;
     color: #697388;
-    background-color: #fffefc;
+    background-color: #f9f8f8;
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     
@@ -22,7 +22,7 @@ h1,h2,h3,h4,h5,h6{
   font-family: "Cormorant Garamond",serif;
     font-style: normal;
     text-transform: uppercase;
-    color: #001c58;
+    color: #2A503B;
     margin: 25px 0;
     -ms-word-wrap: break-word;
     word-wrap: break-word;
